Shira/force-app/main/default/objects/ApplicationForm__c/fields/AccountApplication__c.field-meta.xml
<CustomField>
    <fullName>AccountApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חברה</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ApplicationForms (חברה)</relationshipLabel>
    <relationshipName>ApplicationForms1</relationshipName>
    <type>Lookup</type>
</CustomField>