Shira/force-app/main/default/objects/ApplicationForm__c/fields/ApplicationCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שם מבקש השירות</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ApplicationForms</relationshipLabel>
    <relationshipName>ApplicationForms</relationshipName>
    <type>Lookup</type>
</CustomField>