Shira/force-app/main/default/objects/ApplicationForm__c/fields/ApplicationFormStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFormStatus__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בקשה חדשה</fullName>
                <default>true</default>
                <label>בקשה חדשה</label>
            </value>
            <value>
                <fullName>נדרשות השלמות</fullName>
            </value>
            <value>
                <fullName>אישור התחייבות</fullName>
            </value>
            <value>
                <fullName>ממתין לתשלום אגרה</fullName>
            </value>
            <value>
                <fullName>סיום טיפול</fullName>
            </value>
            <value>
                <fullName>בוטל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>