Shira/force-app/main/default/objects/ApplicationForm__c/fields/CommitmentForm__c.field-meta.xml
<CustomField>
    <fullName>CommitmentForm__c</fullName>
    <label>CommitmentForm</label>
    <type>Url</type>
</CustomField>