Shira/force-app/main/default/objects/ApplicationForm__c/fields/FeeForm__c.field-meta.xml
<CustomField>
    <fullName>FeeForm__c</fullName>
    <label>FeeForm</label>
    <type>Url</type>
</CustomField>