Shira/force-app/main/default/objects/ApplicationForm__c/fields/FeeType__c.field-meta.xml
<CustomField>
    <fullName>FeeType__c</fullName>
    <label>סוג אגרה</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>