Shira/force-app/main/default/objects/ApplicationForm__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>סוג פרויקט</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>רישוי STC/TC</fullName>
            </value>
            <value>
                <fullName>אקספרימנטל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>