Shira/force-app/main/default/objects/ApplicationForm__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>מספר טלפון</label>
    <type>Phone</type>
</CustomField>