Shira/force-app/main/default/objects/ApplicationForm__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <displayFormat>A-{00000}</displayFormat>
    <label>מספר פרויקט</label>
    <type>AutoNumber</type>
</CustomField>