Shira/force-app/main/default/objects/ApplicationForm__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <label>שם הפרויקט</label>
    <length>100</length>
    <type>Text</type>
</CustomField>