Shira/force-app/main/default/objects/ApplicationForm__c/fields/ProjectPurpose__c.field-meta.xml
<CustomField>
    <fullName>ProjectPurpose__c</fullName>
    <label>מטרת/מהות הפרויקט בקצרה</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>